# theManager

./: .cursorrules  .gitignore  BUILD.md  CLAUDE.md  FEATURE-ADDENDUM.md  Futurescope.md  PROJECT-BREAKDOWN.md  PROMPT-PLAN.md  README.md  current-implementation.md  decidr-code-board.jsx  decidr-code-features.xlsx  decidr-code-import.csv  docker-compose.yml  package-lock.json  package.json  phase2-build-guide.md  tsconfig.base.json
.cursor/: mcp.json
agents/: architect.md  bug-triager.md  code-reviewer.md  coder.md  debugger.md  docs.md  perf-analyzer.md  planner.md  refactor-planner.md  reviewer.md  tester.md
docs/app/: index.html  package.json
docs/app/src/: App.tsx
hooks/: PostSave.sh  SessionStart.sh  TicketCreated.sh  TicketMoved.sh  install-git-hooks.sh
hooks/git/: post-checkout.sh  post-commit.sh  post-merge.sh
sidecar/: build.sh  package.json
sidecar/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
tasks/: changelog.md  lessons.md  todo.md
